Add register and sign in modals.

--- a/Dev-Blog/BlazorServer/Pages/Modals/Register.razor
+++ b/Dev-Blog/BlazorServer/Pages/Modals/Register.razor
@@ -1,8 +1,4 @@
-﻿@page "/register"
-
-@using System.ComponentModel.DataAnnotations;
-
-<h3>Register</h3>
+﻿@using System.ComponentModel.DataAnnotations;
 
 <EditForm Model=registerVM>
     <form method="post" action="/signup">
