--- a/Dev-Blog/BlazorServer/Pages/Modals/SignIn.razor
+++ b/Dev-Blog/BlazorServer/Pages/Modals/SignIn.razor
@@ -1,8 +1,4 @@
-﻿@page "/login"
-
-@using System.ComponentModel.DataAnnotations;
-
-<h3>Login</h3>
+﻿@using System.ComponentModel.DataAnnotations;
 
 <EditForm Model=signIn>
     <form method="post" action="/signin">
