--- a/Dev-Blog/BlazorServer/_Imports.razor
+++ b/Dev-Blog/BlazorServer/_Imports.razor
@@ -12,3 +12,5 @@
 @using BlazorServer.Pages.Icons
 @using Microsoft.AspNetCore.Http
 @using BlazorServer.Interfaces
+@using Blazored.Modal
+@using Blazored.Modal.Services
