--- a/Dev-Blog/BlazorServer/Pages/_Host.cshtml
+++ b/Dev-Blog/BlazorServer/Pages/_Host.cshtml
@@ -14,6 +14,7 @@
     <base href="~/" />
     @*<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
         <link href="BlazorServer.styles.css" rel="stylesheet" />*@
+    <link href="_content/Blazored.Modal/blazored-modal.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -21,18 +22,7 @@
 </head>
 <body>
     <component type="typeof(App)" render-mode="ServerPrerendered" />
-
-    @*<div id="blazor-error-ui">
-            <environment include="Staging,Production">
-                An error has occurred. This application may no longer respond until reloaded.
-            </environment>
-            <environment include="Development">
-                An unhandled exception has occurred. See browser dev tools for details.
-            </environment>
-            <a href="" class="reload">Reload</a>
-            <a class="dismiss">🗙</a>
-        </div>*@
-
+    <script src="_content/Blazored.Modal/blazored.modal.js"></script>
     <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
