--- a/Dev-Blog/BlazorServer/Pages/Modals/EditPost.razor
+++ b/Dev-Blog/BlazorServer/Pages/Modals/EditPost.razor
@@ -15,7 +15,7 @@ else
         <ValidationSummary />
 
         <InputTextArea @bind-Value=post.Description placeholder="description" />
-        <InputText form @bind-Value=post.UpdateNum placeholder="update number" />
+        <InputText modal @bind-Value=post.UpdateNum placeholder="update number" />
         <button type="submit">Update</button>
     </EditForm>
 }
