--- a/Dev-Blog/BlazorServer/Shared/MainLayout.razor
+++ b/Dev-Blog/BlazorServer/Shared/MainLayout.razor
@@ -1,13 +1,12 @@
 ﻿@inherits LayoutComponentBase
 
-<div>
-    <header>
-        <NavMenu />
-    </header>
+<header>
+    <NavMenu />
+</header>
 
-    <div class="main">
-        <div>
-            @Body
-        </div>
-    </div>
-</div>
+<main>
+    @Body
+</main>
+
+<footer>
+</footer>
