--- a/Dev-Blog/BlazorServer/Pages/Modals/Register.razor
+++ b/Dev-Blog/BlazorServer/Pages/Modals/Register.razor
@@ -2,52 +2,52 @@
 
 @inject IModalService _modal
 
-<EditForm Model=registerVM>
-    <form method="post" action="/signup">
-        <DataAnnotationsValidator />
-        <ValidationSummary />
-        <InputText modal @bind-Value=registerVM.UserName placeholder="username" />
-        <InputText modal @bind-Value=registerVM.Password type="password" placeholder="password" />
-        <InputText modal @bind-Value=registerVM.ConfirmPassword type="password" placeholder="confirm password" />
-        <InputText modal @bind-Value=registerVM.Email type="email" placeholder="email" />
+    <EditForm Model=registerVM>
+        <form method="post" action="/signup">
+            <DataAnnotationsValidator />
+            <ValidationSummary />
+            <InputText modal @bind-Value=registerVM.UserName placeholder="username" />
+            <InputText modal @bind-Value=registerVM.Password type="password" placeholder="password" />
+            <InputText modal @bind-Value=registerVM.ConfirmPassword type="password" placeholder="confirm password" />
+            <InputText modal @bind-Value=registerVM.Email type="email" placeholder="email" />
 
-        <input type="text" name="username" value=@registerVM.UserName hidden />
-        <input type="password" name="password" value=@registerVM.Password hidden />
-        <input type="password" name="confirmpassword" value=@registerVM.ConfirmPassword hidden />
-        <input type="email" name="email" value=@registerVM.Email hidden />
+            <input type="text" name="username" value=@registerVM.UserName hidden />
+            <input type="password" name="password" value=@registerVM.Password hidden />
+            <input type="password" name="confirmpassword" value=@registerVM.ConfirmPassword hidden />
+            <input type="email" name="email" value=@registerVM.Email hidden />
 
-        <input type="submit" value="Submit" />
-    </form>
-</EditForm>
+            <input modal type="submit" value="Submit" />
+        </form>
+    </EditForm>
 
-@code {
-    RegisterVM registerVM;
+    @code {
+        RegisterVM registerVM;
 
-    protected override async Task OnInitializedAsync()
-    {
-        registerVM = new RegisterVM();
+        protected override async Task OnInitializedAsync()
+        {
+            registerVM = new RegisterVM();
+        }
+
+        public class RegisterVM
+        {
+            [Required]
+            [StringLength(25)]
+            public string UserName { get; set; }
+
+            [Required]
+            [DataType(DataType.Password)]
+            [StringLength(35)]
+            public string Password { get; set; }
+
+            [Required]
+            [DataType(DataType.Password)]
+            [Compare("Password")]
+            [StringLength(35)]
+            public string ConfirmPassword { get; set; }
+
+            [Required]
+            [EmailAddress]
+            [RegularExpression("^(?=.{1,64}@)[A-Za-z0-9_-]+(\\.[A-Za-z0-9_-]+)*@[^-][A-Za-z0-9-]+(\\.[A-Za-z0-9-]+)*(\\.[A-Za-z]{2,})$", ErrorMessage = "Please enter a correct email address")]
+            public string Email { get; set; }
+        }
     }
-
-    public class RegisterVM
-    {
-        [Required]
-        [StringLength(25)]
-        public string UserName { get; set; }
-
-        [Required]
-        [DataType(DataType.Password)]
-        [StringLength(35)]
-        public string Password { get; set; }
-
-        [Required]
-        [DataType(DataType.Password)]
-        [Compare("Password")]
-        [StringLength(35)]
-        public string ConfirmPassword { get; set; }
-
-        [Required]
-        [EmailAddress]
-        [RegularExpression("^(?=.{1,64}@)[A-Za-z0-9_-]+(\\.[A-Za-z0-9_-]+)*@[^-][A-Za-z0-9-]+(\\.[A-Za-z0-9-]+)*(\\.[A-Za-z]{2,})$", ErrorMessage = "Please enter a correct email address")]
-        public string Email { get; set; }
-    }
-}
